Modified one line in 'if: github.ref == 'refs/heads/staging' under name: staging

--- a/.github/workflows/demo1.yaml
+++ b/.github/workflows/demo1.yaml
@@ -32,7 +32,7 @@ jobs:
         run: echo "Deploying to Dev environment"
 
       - name: Deploy to Staging
-        if: github.ref == 'refs/hands/staging
+        if: github.ref == 'refs/heads/staging
         run: echo "Deploying to Staging environment"
 
       - name: Build Docker image (Prod only)
