Add few more lines in README.md and demo1.yaml

--- a/.github/workflows/demo1.yaml
+++ b/.github/workflows/demo1.yaml
@@ -77,7 +77,7 @@ jobs:
         run: docker build -t suraj0294/myapp:${{ vars.APP_VERSION }} --build-arg APP_VERSION=${{ vars.APP_VERSION }} .
 
       - name: Push Docker image (Prod only)
-        if: github.ref = 'refs/heads/master'
+        if: github.ref == 'refs/heads/master'
         env:
           DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
           DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
