Delete few lines in demo1.yaml

--- a/.github/workflows/demo1.yaml
+++ b/.github/workflows/demo1.yaml
@@ -37,7 +37,7 @@ jobs:
 
       - name: Build Docker image (Prod only)
         if: github.ref == 'refs/heads/master'
-        run: docker build -t suraj021194/myapp:${{ vars.APP_VERSION }} .
+        run: docker build -t suraj0294/myapp:${{ vars.APP_VERSION }} .
 
       - name: Push Docker image (Prod only)
         if: github.ref == 'refs/heads/master'
@@ -46,7 +46,7 @@ jobs:
           DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
         run: |
           echo "${DOCKER_PASSWORD}" | docker login -u "${DOCKER_USERNAME}" --password-stdin
-          docker push suraj021194/mapapp:${{ vars.APP_VERSION }}
+          docker push suraj0294/mapapp:${{ vars.APP_VERSION }}
       - name: Deploy to Production
         if: github.ref == 'refs/heads/master'
         run: echo "Deploying to Production environment"
@@ -72,17 +72,17 @@ jobs:
         if: github.ref == 'refs/heads/master'
         run: python app.py
 
-      - name: Build Docker image (Prod only)
-        if: github.ref == 'refs/heads/master'
-        run: docker build -t suraj0294/myapp:${{ vars.APP_VERSION }} --build-arg APP_VERSION=${{ vars.APP_VERSION }} .
-
-      - name: Push Docker image (Prod only)
-        if: github.ref == 'refs/heads/master'
-        env:
-          DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
-          DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
-        run: |
-          echo "${DOCKER_PASSWORD}" | docker login -u "${DOCKER_USERNAME}" --password-stdin
-          docker push suraj0294/myapp:${{ vars.APP_VERSION }}
+#      - name: Build Docker image (Prod only)
+#        if: github.ref == 'refs/heads/master'
+#        run: docker build -t suraj0294/myapp:${{ vars.APP_VERSION }} --build-arg APP_VERSION=${{ vars.APP_VERSION }} .
+#
+#      - name: Push Docker image (Prod only)
+#        if: github.ref == 'refs/heads/master'
+#        env:
+#          DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
+#          DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
+#        run: |
+#          echo "${DOCKER_PASSWORD}" | docker login -u "${DOCKER_USERNAME}" --password-stdin
+#          docker push suraj0294/myapp:${{ vars.APP_VERSION }}
 
 
